--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,8 @@
         </activity>
         <activity android:name=".CustomerMainActivity" />
         <activity android:name=".ServiceProviderMainActivity" />
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
+
+           <!--  The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
              Note that the API key is linked to the encryption key used to sign the APK.
              You need a different API key for each encryption key, including the release key that is used to
@@ -44,9 +44,10 @@
         <activity
             android:name=".CustomerMapsActivity"
             android:label="@string/title_activity_user_maps" />
-
-         <activity android:name=".UserMainPage"></activity>
-        <activity android:name=".EditProfile"></activity>
+        <activity android:name=".UserMainPage" />
+        <activity android:name=".EditProfile" />
+        <activity android:name=".ContactUs" />
+        <activity android:name=".SelectService" />
     </application>
 
 </manifest>
