--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -17,15 +18,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CustomerMainActivity" />
-        <activity android:name=".ServiceProviderMainActivity" />
+        <activity android:name=".CustomerMainActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ServiceProviderMainActivity"
+            android:screenOrientation="portrait"/>
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -41,20 +45,46 @@
 
         <activity
             android:name=".ServiceProviderMapsActivity"
-            android:label="@string/title_activity_maps" />
+            android:label="@string/title_activity_maps"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".CustomerMapsActivity"
-            android:label="@string/title_activity_user_maps" />
-        <activity android:name=".CustomerMenuPage" />
-        <activity android:name=".EditProfile" />
-        <activity android:name=".ContactUs" />
-        <activity android:name=".SelectService" />
-        <activity android:name=".ServiceProviderMenuPage" />
-        <activity android:name=".ForgetPassword" />
-        <activity android:name=".Customer_Service_details" />
-        <activity android:name=".historyCustomer" />
-        <activity android:name=".HistoryCustomerSingle" />
-        <activity android:name=".historyServiceProvider"></activity>
+            android:label="@string/title_activity_user_maps"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".CustomerMenuPage"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".EditProfile"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".ContactUs"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".SelectService"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".ServiceProviderMenuPage"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".ForgetPassword"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".Customer_Service_details"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".historyCustomer"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".HistoryCustomerSingle"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".historyServiceProvider"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name="historyServiceProviderSingle"
+            android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
