edit login page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,6 +89,7 @@
             android:screenOrientation="portrait" />
         <activity android:name=".AdminPage" />
         <activity android:name=".AdminServicesDetails" />
+        <activity android:name=".AdminHistory"></activity>
     </application>
 
 </manifest>
