--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,16 +41,19 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:11.8.0'
     compile 'com.google.android.gms:play-services-location:11.8.0'
     compile 'com.google.android.gms:play-services-places:11.8.0'
+    //to get location from database
     compile 'com.firebase:geofire-android:2.1.1'
     //Google-Directions-Android
     compile 'com.github.jd-alexander:library:1.1.0'
+    //to get an image from uri
     compile 'com.github.bumptech.glide:glide:4.0.0'
+    //firebase storage
     compile 'com.google.firebase:firebase-storage:11.8.0'
-    //wating dialoge
+    //waiting dialog
     compile 'com.github.d-max:spots-dialog:0.7@aar'
     //circle image
     compile 'de.hdodenhof:circleimageview:2.2.0'
-    //layout round corner
+    //layout rounded corner
     compile 'com.jcminarro:RoundKornerLayouts:0.3.1'
 
 
